Mon Oct 07 00:08 2013 CDT
    * lib/playlist.js: Fix /clean not behaving properly (actually was a
      consequence of the remove() function)
    * lib/get-info.js: Send more specific error messages
    * www/assets/js/callbacks.js: Minor fix to the queueFail callback

Sun Oct 06 01:42 2013 CDT
    * lib/channel.js, www/assets/js/callbacks.js: Include the link that
      failed with the queueFail packet.  Clicking the "+ n more" tag
      shows all links that failed for stacked messages
    * lib/utilities.js: Add a formatLink function

Sat Oct 05 20:41 2013 CDT
    * lib/user.js: Fix a bug where duplicate guestnames were allowed with
      different capitalizations

Thu Oct 03 22:09 2013 CDT
    * www/assets/js/ui.js: Use sortable("cancel") to remove the need for
      the `moveby` field of the movement packet
    * www/assets/js/util.js, www/assets/js/callbacks.js, lib/channel.js:
      Remove references to moveby

Thu Oct 03 22:05 2013 CDT
    * lib/channel.js, lib/playlist.js: Fix 'next' bumping not properly
      telling clients that the old item was deleted

Wed Oct 02 22:25 2013 CDT
    * www/channel.html, www/assets/js/ui.js, www/assets/js/callbacks.js:
      Add a small toggle for the MOTD

Wed Oct 02 09:35 2013 CDT
    * lib/channel.js: Fix the use of the wrong variable when checking for
      maximum video length

Tue Oct 01 22:57 2013 CDT
    * lib/asyncqueue.js: Add a generalized queue class for queueing async
      functions to execute in order
    * lib/channel.js, lib/playlist.js: Clean up playlist addition/move/
      deletion.  Should fix #285.
    * lib/server.js: Fix announcement initialization to null
    * tests/naokosimulator2013.js: Add a simple bot that authenticates
      and vomits a giant list of videos into a channel
    * www/assets/js/callbacks.js, www/assets/js/util.js: Clean up
      playlist add/move/delete
    * www/assets/js/data.js: Update CL_VERSION which I always forget
      to do.