@@ -509,11 +509,7 @@ Channel.prototype.getIPRank = function (ip, callback) {
     self.server.db.listAliases(ip, function (err, names) {
         if (self.dead)
             return;
-        self.server.db.listChannelUserRanks(self.name, names,
-                                        function (err, res) {
-            if (self.dead)
-                return;
-
+        self.server.db.listGlobalRanks(names, function (err, res) {
             if(err) {
                 callback(err, null);
                 return;
@@ -524,7 +520,16 @@ Channel.prototype.getIPRank = function (ip, callback) {
                 rank = (res[i] > rank) ? res[i] : rank;
             }
 
-            self.server.db.listGlobalRanks(names, function (err, res) {
+            if (!self.registered) {
+                callback(null, rank);
+                return;
+            }
+
+            self.server.db.listChannelUserRanks(self.name, names,
+                                                function (err, res) {
+                if (self.dead)
+                    return;
+
                 if(err) {
                     callback(err, null);
                     return;
@@ -536,6 +541,7 @@ Channel.prototype.getIPRank = function (ip, callback) {
 
                 callback(null, rank);
             });
+
         });
     });
 }
@@ -621,6 +627,8 @@ Channel.prototype.unbanName = function(actor, name) {
     self.namebans[name] = null;
     delete self.namebans[name];
     self.logger.log("*** " + actor.name + " un-namebanned " + name);
+    if (!self.registered)
+        return;
 
     self.server.db.clearChannelNameBan(self.name, name, function (err, res) {
         if (self.dead)
@@ -1673,6 +1681,8 @@ Channel.prototype.tryUncache = function(user, data) {
     if(typeof data.id != "string") {
         return;
     }
+    if (!self.registered)
+        return;
     self.server.db.removeFromLibrary(self.name, data.id,
                                      function (err, res) {
         if (self.dead)
