@@ -1,3 +1,7 @@
+Mon Oct 07 10:02 2013 CDT
+    * lib/channel.js: Fix several cases where an unregistered channel
+      might attempt to make a database call which then fails.
+
 Mon Oct 07 00:08 2013 CDT
     * lib/playlist.js: Fix /clean not behaving properly (actually was a
       consequence of the remove() function)
